@@ -241,39 +241,22 @@
                 </plugins>
             </reporting>
         </profile>
-        <!--
-        does not work
         <profile>
             <id>Java-9</id>
             <activation>
-                <jdk>9</jdk>
+                <jdk>[9,)</jdk>
             </activation>
             <properties>
-                <compiler.argline.modules>-add-modules=java.xml.bind</compiler.argline.modules>
-                <compiler.target>1.9</compiler.target>
+                <compiler.target>1.8</compiler.target>
                 <compiler.source>1.8</compiler.source>
+                <exclude.tests.concolic>**/*Concolic*.java</exclude.tests.concolic>
+                <exclude.tests.mimeType>**/*TestMIMEType.java</exclude.tests.mimeType>
             </properties>
             <dependencyManagement>
                 <dependencies>
-                    <dependency>
-                        <groupId>com.sun.xml.bind</groupId>
-                        <artifactId>jaxb-impl</artifactId>
-                        <version>2.3.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.glassfish.jaxb</groupId>
-                        <artifactId>jaxb-runtime</artifactId>
-                        <version>2.3.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>javax.activation</groupId>
-                        <artifactId>activation</artifactId>
-                        <version>1.1.1</version>
-                    </dependency>
                 </dependencies>
             </dependencyManagement>
         </profile>
-        -->
         <profile>
             <id>Java-8</id>
             <activation>
@@ -282,7 +265,8 @@
             <properties>
                 <compiler.target>1.8</compiler.target>
                 <compiler.source>1.8</compiler.source>
-                <compiler.argline.modules></compiler.argline.modules>
+                <exclude.tests.concolic></exclude.tests.concolic>
+                <exclude.tests.mimeType></exclude.tests.mimeType>
             </properties>
         </profile>
     </profiles>
@@ -294,14 +278,6 @@
             libraries: https://glassfish.java.net/public/CDDL+GPL_1_1.html For each library
             you want to add, add a comment regarding its used license. -->
         <dependencies>
-            <!--<dependency>
-                <groupId>com.sun</groupId>
-                <artifactId>tools</artifactId>
-                <version>1.0.0</version>
-                <scope>system</scope>
-                <systemPath>${toolsjar}</systemPath>
-            </dependency>-->
-
             <dependency>
                 <groupId>com.sun.xml.bind</groupId>
                 <artifactId>jaxb-core</artifactId>
@@ -353,7 +329,7 @@
                 <!-- MIT -->
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>2.16.0</version>
+                <version>3.0.0</version>
             </dependency>
             <dependency>
                 <!-- Common Public License Version 1.0 -->
@@ -365,31 +341,31 @@
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-commons</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-tree</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-analysis</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Adhoc license, copyright holder is INRIA -->
                 <groupId>org.ow2.asm</groupId>
                 <artifactId>asm-util</artifactId>
-                <version>6.0</version>
+                <version>7.0</version>
             </dependency>
             <dependency>
                 <!-- Apache 2 -->
@@ -478,12 +454,13 @@
                 <version>1.0.1.Final</version>
             </dependency>
             -->
+            <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
             <dependency>
-                <!-- LGPL 2.1 -->
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-core</artifactId>
-                <version>5.2.13.Final</version>
+                <version>5.4.4.Final</version>
             </dependency>
+
             <dependency>
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
@@ -570,6 +547,7 @@
             <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+
 
 
     <build>
@@ -710,15 +688,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${compiler.source}</source>
                     <target>${compiler.target}</target>
-                    <compilerArgs>
-                        <arg>${compiler.argline.modules}</arg>
-                    </compilerArgs>
                     <encoding>${project.build.sourceEncoding}</encoding>
-                    <!--<fork>true</fork>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -764,7 +738,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20.1</version>
+                <version>2.21.0</version>
                 <configuration>
                     <!--<rerunFailingTestsCount>${rerunFailingTestsCount}</rerunFailingTestsCount>-->
                     <forkCount>1</forkCount>
@@ -778,14 +752,10 @@
                     <excludes>
                         <exclude>${integrationTests}</exclude>
                         <exclude>${systemTests}</exclude>
+                        <exclude>${exclude.tests.concolic}</exclude>
+                        <exclude>${exclude.tests.mimeType}</exclude>
                     </excludes>
-                    <argLine> ${compiler.argline.modules} -Xms512m -Xmx4096m </argLine>
-                    <systemProperties>
-                    <property>
-                        <name>jdk.attach.allowAttachSelf</name>
-                        <value>true</value>
-                    </property>
-                    </systemProperties>
+                    <argLine>-Djdk.attach.allowAttachSelf=true -Xms512m -Xmx4096m </argLine>
                 </configuration>
             </plugin>
             <!-- pluging to run tests after 'package' phase in 'integration-test' -->
@@ -799,12 +769,7 @@
                         <include>${integrationTests}</include>
                         <include>${systemTests}</include>
                     </includes -->
-                    <systemProperties>
-                        <property>
-                            <name>jdk.attach.allowAttachSelf</name>
-                            <value>true</value>
-                        </property>
-                    </systemProperties>
+                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
                 </configuration>
                 <executions>
                     <execution>
